--- a/BACK/package.json
+++ b/BACK/package.json
@@ -14,9 +14,11 @@
 		"bson": "^6.7.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
+		"ejs": "^3.1.10",
 		"express": "^4.19.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.6.1",
+		"multer": "^1.4.5-lts.1",
 		"mysql2": "^3.9.7",
 		"nodemon": "^3.1.0",
 		"validator": "^13.12.0"
