--- a/BACK/package.json
+++ b/BACK/package.json
@@ -20,6 +20,7 @@
 		"mongodb": "^6.6.1",
 		"multer": "^1.4.5-lts.1",
 		"mysql2": "^3.9.7",
+		"nodemailer": "^6.9.13",
 		"nodemon": "^3.1.0",
 		"validator": "^13.12.0"
 	}
