--- a/BACK/.env.example
+++ b/BACK/.env.example
@@ -1,4 +1,12 @@
-MYSQL_SECRET_KEY = "YOUR_SECRET_KEY"
+# Protection des données sensibles avec dotenv 
+
 MYSQL_USER = "YOUR_USER"
+MYSQL_PASSWORD = "YOUR_PASSWORD"
 MYSQL_DATABASE = "YOUR_DATABASE"
+
 PORT = "YOUR_PORT"
+SECRET_KEY = "YOUR_SECRET_KEY"
+
+SMTP_PASSWORD= "YOUR_SMTP_PASSWORD"
+SMTP_EMAIL = "YOUR_SMTP_EMAIL"
+SMTP_HOST= "YOUR_SMTP_HOST"
